Changes for calculating year-on-year accuracy 1. Handled the unseen players issue 2. removed the unseen players data from test dataset, and tested only the test data which has seen players in training data 3. Calculated overall accuracy for the models - random forest and knn 4. Calculated year-on-year accuracy for the models - random forest and knn

--- a/models/player_mappings/player_mapping_2007.json
+++ b/models/player_mappings/player_mapping_2007.json
@@ -455,5 +455,130 @@
     "Yaroslav Korolev": 453,
     "Zach Randolph": 454,
     "Zaza Pachulia": 455,
-    "Zydrunas Ilgauskas": 456
+    "Zydrunas Ilgauskas": 456,
+    "player_0": 457,
+    "player_1": 458,
+    "player_2": 459,
+    "player_3": 460,
+    "player_4": 461,
+    "player_5": 462,
+    "player_6": 463,
+    "player_7": 464,
+    "player_8": 465,
+    "player_9": 466,
+    "player_10": 467,
+    "player_11": 468,
+    "player_12": 469,
+    "player_13": 470,
+    "player_14": 471,
+    "player_15": 472,
+    "player_16": 473,
+    "player_17": 474,
+    "player_18": 475,
+    "player_19": 476,
+    "player_20": 477,
+    "player_21": 478,
+    "player_22": 479,
+    "player_23": 480,
+    "player_24": 481,
+    "player_25": 482,
+    "player_26": 483,
+    "player_27": 484,
+    "player_28": 485,
+    "player_29": 486,
+    "player_30": 487,
+    "player_31": 488,
+    "player_32": 489,
+    "player_33": 490,
+    "player_34": 491,
+    "player_35": 492,
+    "player_36": 493,
+    "player_37": 494,
+    "player_38": 495,
+    "player_39": 496,
+    "player_40": 497,
+    "player_41": 498,
+    "player_42": 499,
+    "player_43": 500,
+    "player_44": 501,
+    "player_45": 502,
+    "player_46": 503,
+    "player_47": 504,
+    "player_48": 505,
+    "player_49": 506,
+    "player_50": 507,
+    "player_51": 508,
+    "player_52": 509,
+    "player_53": 510,
+    "player_54": 511,
+    "player_55": 512,
+    "player_56": 513,
+    "player_57": 514,
+    "player_58": 515,
+    "player_59": 516,
+    "player_60": 517,
+    "player_61": 518,
+    "player_62": 519,
+    "player_63": 520,
+    "player_64": 521,
+    "player_65": 522,
+    "player_66": 523,
+    "player_67": 524,
+    "player_68": 525,
+    "player_69": 526,
+    "player_70": 527,
+    "player_71": 528,
+    "player_72": 529,
+    "player_73": 530,
+    "player_74": 531,
+    "player_75": 532,
+    "player_76": 533,
+    "player_77": 534,
+    "player_78": 535,
+    "player_79": 536,
+    "player_80": 537,
+    "player_81": 538,
+    "player_82": 539,
+    "player_83": 540,
+    "player_84": 541,
+    "player_85": 542,
+    "player_86": 543,
+    "player_87": 544,
+    "player_88": 545,
+    "player_89": 546,
+    "player_90": 547,
+    "player_91": 548,
+    "player_92": 549,
+    "player_93": 550,
+    "player_94": 551,
+    "player_95": 552,
+    "player_96": 553,
+    "player_97": 554,
+    "player_98": 555,
+    "player_99": 556,
+    "player_100": 557,
+    "player_101": 558,
+    "player_102": 559,
+    "player_103": 560,
+    "player_104": 561,
+    "player_105": 562,
+    "player_106": 563,
+    "player_107": 564,
+    "player_108": 565,
+    "player_109": 566,
+    "player_110": 567,
+    "player_111": 568,
+    "player_112": 569,
+    "player_113": 570,
+    "player_114": 571,
+    "player_115": 572,
+    "player_116": 573,
+    "player_117": 574,
+    "player_118": 575,
+    "player_119": 576,
+    "player_120": 577,
+    "player_121": 578,
+    "player_122": 579,
+    "player_123": 580,
+    "player_124": 581
 }
